@@ -1,3 +1,6 @@
+2010-03-12 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* bug: configuration module won't show up for new user.
+
 2010-03-10 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* Release 2.6.6
 
